0710 댓글 없을 때 페이징 조건문 추가

--- a/build.gradle
+++ b/build.gradle
@@ -72,8 +72,8 @@ sourceSets {
 }
 
 task deleteBuild(type: Delete) {
-    delete "$buildDir/generated-sources/annotations/"
+    delete "$projectDir/bin/generated-sources/annotations/"
 }
 
 compileJava.dependsOn('clean')
-compileTestJava.dependsOn('clean')
+// compileTestJava.dependsOn('clean')
